Fix button margin in .knap class for consistent spacing

--- a/css/praktisk.css
+++ b/css/praktisk.css
@@ -35,6 +35,7 @@ main p {
 
 .knap {
   text-align: center;
+  margin: 40px;
 }
 
 button {
